# gui-slint

./: .gitignore  Cargo.toml  README.md
src/: bprice.rs  main.rs
ui/: app-window.slint
