[package]
name = "slintgui"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
slint = "1.7.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.35.0"
serde_json = "1.0"

[build-dependencies]
slint-build = "1.7.2"
